master - add config-server

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ build/
 /eureka-serwer/.mvn/wrapper/maven-wrapper.jar
 /eureka-serwer/mvnw
 /eureka-serwer/mvnw.cmd
+/config-server/mvnw
+/config-server/mvnw.cmd
+/config-server/.mvn/wrapper/maven-wrapper.jar
