--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=0
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+spring.application.name = config-server
+spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.clone-on-start=true
