--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -11,8 +11,8 @@
     <groupId>xkondix</groupId>
     <artifactId>eureka-serwer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-serwer</name>
-    <description>eureka-serwer</description>
+    <name>eureka-server</name>
+    <description>eureka-server</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.2</spring-cloud.version>
